{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 46,
  "lineage": "a9229de4-8dbe-d5ea-4833-7dcdcbc16af1",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:vpc/vpc-0f658da3a4aee0864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ccb5bc2929133866",
            "default_route_table_id": "rtb-01ceaeabdaa31039d",
            "default_security_group_id": "sg-0b4bb285a7973c7d4",
            "dhcp_options_id": "dopt-0a3ecc657629d9dd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f658da3a4aee0864",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ceaeabdaa31039d",
            "owner_id": "988303390712",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-045443a70fafb8bbc",
            "arn": "arn:aws:ec2:ap-south-1:988303390712:instance/i-0d3d5d55ef397327d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3d5d55ef397327d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "modular-dev-Terraform-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0234efe4f9592f58e"
              }
            ],
            "primary_network_interface_id": "eni-0234efe4f9592f58e",
            "private_dns": "ip-172-31-1-73.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.1.73",
            "public_dns": "ec2-13-201-167-29.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.167.29",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00d9c57dae1021b9e",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "modular-dev-Terra_security_grp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c82e4eedeb3be62a",
            "tags": {
              "Environment": "dev",
              "Name": "modular-dev-Terra-Created-Instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "modular-dev-Terra-Created-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0255c863fe3ce4741"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "i-0d3d5d55ef397327d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default-vpc",
            "module.dev-infra.aws_key_pair.aws-key",
            "module.dev-infra.aws_security_group.my-security-grp"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:security-group/sg-0255c863fe3ce4741",
            "description": "This is Auto-Generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0255c863fe3ce4741",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is Extra Port.",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is HTTP Port.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is SSh Port.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "modular-dev-Terra_security_grp",
            "name_prefix": "",
            "owner_id": "988303390712",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "modular-dev-Terra_security_grp"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "modular-dev-Terra_security_grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f658da3a4aee0864"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "sg-0255c863fe3ce4741",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:vpc/vpc-0f658da3a4aee0864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ccb5bc2929133866",
            "default_route_table_id": "rtb-01ceaeabdaa31039d",
            "default_security_group_id": "sg-0b4bb285a7973c7d4",
            "dhcp_options_id": "dopt-0a3ecc657629d9dd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f658da3a4aee0864",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ceaeabdaa31039d",
            "owner_id": "988303390712",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-045443a70fafb8bbc",
            "arn": "arn:aws:ec2:ap-south-1:988303390712:instance/i-0493b446cae648c8c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0493b446cae648c8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "modular-prod-Terraform-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-075c845e05b874696"
              }
            ],
            "primary_network_interface_id": "eni-075c845e05b874696",
            "private_dns": "ip-172-31-6-57.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.6.57",
            "public_dns": "ec2-35-154-110-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.110.129",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0be4b3c9e524ea7da",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "modular-prod-Terra_security_grp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c82e4eedeb3be62a",
            "tags": {
              "Environment": "prod",
              "Name": "modular-prod-Terra-Created-Instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "modular-prod-Terra-Created-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c765d697d67858c1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "i-0493b446cae648c8c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default-vpc",
            "module.prod-infra.aws_key_pair.aws-key",
            "module.prod-infra.aws_security_group.my-security-grp"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-045443a70fafb8bbc",
            "arn": "arn:aws:ec2:ap-south-1:988303390712:instance/i-0a59a30684e68ba6a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a59a30684e68ba6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "modular-prod-Terraform-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009959be819eb4fa8"
              }
            ],
            "primary_network_interface_id": "eni-009959be819eb4fa8",
            "private_dns": "ip-172-31-0-123.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.123",
            "public_dns": "ec2-13-201-168-125.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.168.125",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cee0dd9c2474da4d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "modular-prod-Terra_security_grp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c82e4eedeb3be62a",
            "tags": {
              "Environment": "prod",
              "Name": "modular-prod-Terra-Created-Instance"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "modular-prod-Terra-Created-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c765d697d67858c1"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "i-0a59a30684e68ba6a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default-vpc",
            "module.prod-infra.aws_key_pair.aws-key",
            "module.prod-infra.aws_security_group.my-security-grp"
          ]
        }
      ]
    },
    {
      "module": "module.prod-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:security-group/sg-0c765d697d67858c1",
            "description": "This is Auto-Generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c765d697d67858c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is Extra Port.",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is HTTP Port.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is SSh Port.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "modular-prod-Terra_security_grp",
            "name_prefix": "",
            "owner_id": "988303390712",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "modular-prod-Terra_security_grp"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "modular-prod-Terra_security_grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f658da3a4aee0864"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "sg-0c765d697d67858c1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-infra.aws_default_vpc.default-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.stag-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:vpc/vpc-0f658da3a4aee0864",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ccb5bc2929133866",
            "default_route_table_id": "rtb-01ceaeabdaa31039d",
            "default_security_group_id": "sg-0b4bb285a7973c7d4",
            "dhcp_options_id": "dopt-0a3ecc657629d9dd6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0f658da3a4aee0864",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ceaeabdaa31039d",
            "owner_id": "988303390712",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stag-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-045443a70fafb8bbc",
            "arn": "arn:aws:ec2:ap-south-1:988303390712:instance/i-05f8ec6c3c788b27b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f8ec6c3c788b27b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "modular-stag-Terraform-Key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a4e461c686ae2c0c"
              }
            ],
            "primary_network_interface_id": "eni-0a4e461c686ae2c0c",
            "private_dns": "ip-172-31-14-52.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.14.52",
            "public_dns": "ec2-13-233-192-43.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.192.43",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f7e51b0c2892fae3",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "modular-stag-Terra_security_grp"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c82e4eedeb3be62a",
            "tags": {
              "Environment": "stag",
              "Name": "modular-stag-Terra-Created-Instance"
            },
            "tags_all": {
              "Environment": "stag",
              "Name": "modular-stag-Terra-Created-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c684d7ce8d567762"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "i-05f8ec6c3c788b27b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stag-infra.aws_default_vpc.default-vpc",
            "module.stag-infra.aws_key_pair.aws-key",
            "module.stag-infra.aws_security_group.my-security-grp"
          ]
        }
      ]
    },
    {
      "module": "module.stag-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:988303390712:security-group/sg-0c684d7ce8d567762",
            "description": "This is Auto-Generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c684d7ce8d567762",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is Extra Port.",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is HTTP Port.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is SSh Port.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "modular-stag-Terra_security_grp",
            "name_prefix": "",
            "owner_id": "988303390712",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "stag",
              "Name": "modular-stag-Terra_security_grp"
            },
            "tags_all": {
              "Environment": "stag",
              "Name": "modular-stag-Terra_security_grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f658da3a4aee0864"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "988303390712",
            "id": "sg-0c684d7ce8d567762",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.stag-infra.aws_default_vpc.default-vpc"
          ]
        }
      ]
    }
  ]
}